--- a/src/Styles/styleNavBar.css
+++ b/src/Styles/styleNavBar.css
@@ -36,3 +36,50 @@
     background-color: #DBE2EF;
     transition: .5s ease-in-out;
 }
+.menuHamburguer {
+    display: none;
+    position: absolute;
+    z-index: 2;
+    bottom: 5rem;
+    left: 3.5%;
+    background-color: var(--co-cyan-sky-navbar);
+    border-radius: 5px;
+    border: 1px solid var(--co-dm-blue);
+    padding: 2rem;
+}
+.aOff {
+    display: none;
+}
+.menuHamburguer {
+    display: inline-flex;
+}
+/*animations*/
+.slide-in-right {
+	-webkit-animation: slide-in-right 1.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: slide-in-right 1.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+@-webkit-keyframes slide-in-right {
+    0% {
+      -webkit-transform: translateX(1000px);
+              transform: translateX(1000px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+      opacity: 1;
+    }
+  }
+  @keyframes slide-in-right {
+    0% {
+      -webkit-transform: translateX(1000px);
+              transform: translateX(1000px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+      opacity: 1;
+    }
+  }
+  
