[fix] chaanges websites

--- a/src/Styles/styleDarkMode.css
+++ b/src/Styles/styleDarkMode.css
@@ -26,3 +26,7 @@ transition: 2s ease-in-out;
     background-color:#DBE2EF; 
     transition: 2s ease-in-out;  
 }
+#onDarkMode #myName {
+    color: var(--co-letter-blue-sky);
+    transition: 2s ease-in-out;
+}
