--- a/src/Styles/stylePrincipal.css
+++ b/src/Styles/stylePrincipal.css
@@ -40,6 +40,9 @@
     border: none;
     cursor: pointer;
 }
+#myName{
+    color: var(--co-dm-blue);
+}
 .contPrincipal_row {
     background-color: var(--co-line-orange-opacity);
     justify-content: center;
