--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
 --co-letter-blue-sky : #3F72AF;
 --co-dm-blue : #19376D;
 --co-dm-blue-sky :#DBEDF3;
+--co-gray-light :#F0F0F0;
 }
 /*Reset*/
 * {
