--- a/src/Styles/stylePortfolio.css
+++ b/src/Styles/stylePortfolio.css
@@ -56,6 +56,12 @@ background-color: #DBE2EF;
         padding: .15rem;
         border-radius: 7px;
 }
+.paragraphPort {
+       background-color: var(--co-gray-light);
+        padding: 1rem;
+        width: 15rem;
+        border-radius: 7px;
+}
 /*animations*/
 .slide-in-elliptic-left-fwd {
 	-webkit-animation: slide-in-elliptic-left-fwd 2s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
